--- a/client/css/themes/dawn.scss
+++ b/client/css/themes/dawn.scss
@@ -1,5 +1,7 @@
 $light: #3160ab;
 $dark: #00235b;
+$pale: #A5AFBE;
+$palePale: #d3d8df;
 
 $toolbar-button-color: $dark;
 
@@ -26,8 +28,7 @@ a:hover {
   }
 
   .btn:active, .btn.active {
-    background-color: #eee;
-    box-shadow: inset 0 0 5px rgba(0,0,0,.125);
+    background-color: $palePale;
   }
 
   .btn.active:hover {
@@ -39,9 +40,11 @@ a:hover {
 .nav-pills>li.active>a,
 .nav-pills>li.active>a:hover,
 .nav-pills>li.active>a:focus {
-  background: #A5AFBE;
+  background: $pale;
   border-radius: 0;
 }
 
 
-
+.separator {
+  border-color: $pale;
+}
