--- a/client/js/Toolbar/styles/Toolbar.css
+++ b/client/js/Toolbar/styles/Toolbar.css
@@ -14,7 +14,7 @@
   .webgme-toolbar-ext .separator {
     margin-left: 0;
     margin-right: 0;
-    border-right: 1px dotted #9fb2d1;
+    border-right: 1px solid #9fb2d1;
     width: 0;
     height: 28px;
     display: inline-block;
