--- a/client/js/Panels/PropertyEditor/styles/PointerWidget.css
+++ b/client/js/Panels/PropertyEditor/styles/PointerWidget.css
@@ -3,12 +3,10 @@
  * 
  * Author: Robert Kereskenyi
  */
-
 .ptr-widget {
-  i {
+  position: relative; }
+  .ptr-widget i {
     margin-top: 6px;
     position: absolute;
     right: 2px;
-    cursor: pointer;
-  }
-}
+    cursor: pointer; }
