default ul, lo unstyled rule

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -31,6 +31,12 @@ html,body {
     -ms-user-select:none;
 }
 
+ul.unstyled,
+ol.unstyled {
+    margin-left: 0;
+    list-style: none;
+}
+
 .user-select-off {
     -moz-user-select:-moz-none;
     -webkit-user-select:none;
