--- a/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
+++ b/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
@@ -5,7 +5,7 @@ $height: 40px;
 $border: 1px solid #000000;
 $padding: 3px;
 $background-color: #ECECEC;
-$box-shadow: 0px 0px 7px 0px #444 inset;
+$box-shadow: inset 0px 0px 7px 0px rgba(0,0,0,.15);
 $selected-background-color: #DBEAFC;
 $selected-box-shadow: 0px 0px 15px 0px #1276D4 !important;
 $selected-border: 1px solid #52A8EC;
