changin selected toolbar button style

--- a/client/js/Toolbar/styles/Toolbar.scss
+++ b/client/js/Toolbar/styles/Toolbar.scss
@@ -163,4 +163,6 @@ div.toolbar-container .btn {
     border: 1px solid #fff;
     border-radius: 0;
     padding: 4px 8px;
+
+    box-shadow: none;
 }
