--- a/client/js/Toolbar/styles/Toolbar.css
+++ b/client/js/Toolbar/styles/Toolbar.css
@@ -119,4 +119,5 @@ div.toolbar-container {
 div.toolbar-container .btn {
   border: 1px solid #fff;
   border-radius: 0;
-  padding: 4px 8px; }
+  padding: 4px 8px;
+  box-shadow: none; }
