--- a/client/css/themes/dawn.scss
+++ b/client/css/themes/dawn.scss
@@ -53,3 +53,7 @@ a:hover {
 .separator {
   border-color: $pale;
 }
+
+.navbar-inverse {
+  background-image: linear-gradient(to bottom,#040524 0,#03071D 100%);
+}
