--- a/client/js/Toolbar/styles/Toolbar.scss
+++ b/client/js/Toolbar/styles/Toolbar.scss
@@ -3,7 +3,7 @@
  * @author nabana / https://github.com/nabana
  */
 
-$toolbar-item-margin-left: 0;
+$toolbar-item-margin-left: 2px;
 $toolbar-separator-margin: 0;
 $separator-bg-color: #9fb2d1;
 
@@ -18,7 +18,6 @@ $webgme-toolbar-ext-toggle-hover-background-color: #E6E6E6;
 
   .toolbar-button {
     display: inline-block;
-    margin-left: $toolbar-item-margin-left;
     position: relative;
 
   }
@@ -28,7 +27,7 @@ $webgme-toolbar-ext-toggle-hover-background-color: #E6E6E6;
     margin-right: $toolbar-separator-margin - $toolbar-item-margin-left;
     border-right: 1px solid $separator-bg-color;
     width: 0;
-    height: 12px;
+    height: 26px;
     display: inline-block;
     vertical-align: middle;
     position: relative;
@@ -162,7 +161,8 @@ div.toolbar-container {
 div.toolbar-container .btn {
     border: 1px solid #fff;
     border-radius: 0;
-    padding: 4px 8px;
+    padding: 1px 5px;
+    margin: 3px 5px !important;
 
     box-shadow: none;
 }
