--- a/client/js/Toolbar/styles/Toolbar.scss
+++ b/client/js/Toolbar/styles/Toolbar.scss
@@ -24,7 +24,7 @@ $webgme-toolbar-ext-toggle-hover-background-color: #E6E6E6;
 
   .separator {
     margin-left: $toolbar-separator-margin;
-    margin-right: $toolbar-separator-margin - $toolbar-item-margin-left;
+    margin-right: $toolbar-separator-margin;
     border-right: 1px solid $separator-bg-color;
     width: 0;
     height: 26px;
