--- a/client/decorators/MetaDecorator/DiagramDesigner/styles/MetaDecorator.DiagramDesignerWidget.scss
+++ b/client/decorators/MetaDecorator/DiagramDesigner/styles/MetaDecorator.DiagramDesignerWidget.scss
@@ -1,4 +1,4 @@
-@import "../../../scss/Widgets/DiagramDesigner/Connector";
+@import "../../../../scss/Widgets/DiagramDesigner/Connector";
 
 $min-width: 90px;
 $height: 40px;
