--- a/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
+++ b/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
@@ -1,12 +1,12 @@
 $min-width: 65px;
 $height: 40px;
-$border: 1px solid rgba(0,0,0,0);
+$border: none;
 $padding: 0px;
 $background-color: #ECECEC;
 $box-shadow: 0px 0px 7px 0px #444 inset;
 $selected-background-color:  rgba(219, 234, 252, 0.2); /*#DBEAFC;*/
 $selected-box-shadow: 0px 0px 15px 0px #1276D4 !important;
-$selected-border: 1px solid #52A8EC;
+$selected-border: none;
 $svg-name-height: 16px;
 $abstract-class-name-color: #AAAAAA;
 $port-height: 13px;
