--- a/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
@@ -61,7 +61,7 @@
       transform: scaleX(-1); }
 
 .designer-item .svg-decorator .svg-content svg {
-  border: 1px solid rgba(0, 0, 0, 0); }
+  border: none; }
   .designer-item .svg-decorator .svg-content svg .connector {
     fill: #fefefe;
     stroke: blue;
@@ -84,7 +84,7 @@
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
 .designer-item.selected .svg-decorator .svg-content svg {
-  border: 1px solid #52a8ec;
+  border: none;
   background-color: rgba(219, 234, 252, 0.2);
   -webkit-box-shadow: 0px 0px 15px 0px #1276d4 !important;
   -moz-box-shadow: 0px 0px 15px 0px #1276d4 !important;
