--- a/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
+++ b/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
@@ -37,6 +37,7 @@ $port-height: 13px;
       text-overflow: ellipsis;
       height: $svg-name-height;
       line-height: $svg-name-height;
+      background-color: #fff;
     }
 
     &.abstract {
