--- a/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
@@ -21,7 +21,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     height: 16px;
-    line-height: 16px; }
+    line-height: 16px;
+    background-color: #fff; }
   .svg-decorator.abstract .name {
     font-style: italic;
     color: #aaaaaa; }
