--- a/client/decorators/MetaDecorator/DiagramDesigner/templates/AttributeDetailsDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/templates/AttributeDetailsDialog.html
@@ -61,7 +61,7 @@
             <div class="modal-footer">
                 <a href="#" class="btn btn-danger btn-delete pull-left">Delete</a>
                 <a href="#" class="btn btn-primary disabled btn-save">Save</a>
-                <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+                <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
             </div>
         </div>
     </div>
