--- a/client/css/themes/dawn.scss
+++ b/client/css/themes/dawn.scss
@@ -1,9 +1,15 @@
 $light: #3160ab;
+$light_transparent: rgba(49,96,161,.65);
+
 $dark: #00235b;
+$dark_transparent: rgba(0,35,91,.75);
+
 $pale: #A5AFBE;
 $palePale: #d3d8df;
 
 $toolbar-button-color: $dark;
+
+$accentColor: #f70;
 
 
 a{
@@ -11,7 +17,7 @@ a{
 }
 
 a:hover {
-    color: $dark;
+    color: $accentColor;
 }
 
 
@@ -57,3 +63,30 @@ a:hover {
 .navbar-inverse {
   background-image: linear-gradient(to bottom,#040524 0,#03071D 100%);
 }
+
+/* Selected styling */
+
+
+.selected > div {
+    box-shadow: 0 0 4px $dark_transparent;
+    background-color: #fff;
+}
+
+.s-btn {
+  background-color: $dark !important;
+  color: #fff !important;
+
+  &:hover {
+    background-color: $accentColor !important;
+  }
+}
+
+/*.selected {
+    .svg-decorator {
+      .svg-content {
+        svg {
+          box-shadow: 0 0 5px $dark;
+        }
+      }
+    }
+}*/
