rverting selected box white

--- a/client/css/themes/dawn.css
+++ b/client/css/themes/dawn.css
@@ -32,8 +32,7 @@ a:hover {
 
 /* Selected styling */
 .selected > div {
-  box-shadow: 0 0 4px rgba(0, 35, 91, 0.75);
-  background-color: #fff; }
+  box-shadow: 0 0 4px rgba(0, 35, 91, 0.75); }
 
 .s-btn {
   background-color: #00235b !important;
