attribute panel enum and boolean type changes work

--- a/client/decorators/MetaDecorator/DiagramDesigner/templates/AttributeDetailsDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/templates/AttributeDetailsDialog.html
@@ -30,7 +30,7 @@
                         <input type="text" id="inputDefaultValue" placeholder="Default value">
                     </div>
                 </div>
-                <div class="control-group hide" id="pDefaultValueBoolean">
+                <div class="control-group" id="pDefaultValueBoolean">
                     <label class="col-sm-4 control-label">Default value</label>
                     <div class="col-sm-8 controls">
                         <label class="radio inline">
@@ -52,7 +52,7 @@
                         </label>
                     </div>
                 </div>
-                <div id="pEnumValues" class="form-group hide">
+                <div id="pEnumValues" class="form-group">
                     <label class="col-sm-4 control-label" for="inputEnumValues">Values</label>
                     <div class="col-sm-8 controls">
                         <textarea rows="3" id="inputEnumValues" placeholder="Enter each value in separate line"></textarea>
