fixing aspects dialog

--- a/client/decorators/MetaDecorator/DiagramDesigner/templates/AspectDetailsDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/templates/AspectDetailsDialog.html
@@ -5,23 +5,23 @@
                 <button type="button" class="close" data-dismiss="modal">×</button>
                 <h3>Edit aspect parameters...</h3>
             </div>
-            <div class="modal-body form-horizontal">
-                <div class="control-group" id="pName">
-                    <label class="control-label" for="inputName">Name</label>
-                    <div class="controls">
+            <form class="modal-body form-horizontal" role="form">
+                <div class="form-group" id="pName">
+                    <label class="col-sm-4 control-label" for="inputName">Name</label>
+                    <div class="col-sm-8 controls">
                         <input type="text" id="inputName" placeholder="Name">
                     </div>
                 </div>
-                <div class="control-group" id="pTypes">
-                    <label class="control-label">Types</label>
-                    <div class="controls">
+                <div class="form-group" id="pTypes">
+                    <label class="col-sm-4 control-label">Types</label>
+                    <div class="col-sm-8 controls">
                     </div>
                 </div>
-            </div>
+            </form>
             <div class="modal-footer">
                 <a href="#" class="btn btn-danger btn-delete pull-left">Delete</a>
                 <a href="#" class="btn btn-primary btn-save">Save</a>
-                <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+                <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
             </div>
         </div>
     </div>
