--- a/client/js/Dialogs/PluginResults/styles/PluginResultsDialog.css
+++ b/client/js/Dialogs/PluginResults/styles/PluginResultsDialog.css
@@ -7,8 +7,7 @@
   padding: 3px;
   margin-bottom: 10px;
   background-color: #f5f5f5;
-  border: 1px solid #ddd;
-  color: #9da0a4; }
+  border: 1px solid #ddd; }
   .plugin-results-dialog .modal-body div.plugin-result.unread {
     color: #3a87ad;
     background-color: #d9edf7;
