--- a/client/js/Dialogs/PluginResults/styles/PluginResultsDialog.scss
+++ b/client/js/Dialogs/PluginResults/styles/PluginResultsDialog.scss
@@ -36,6 +36,7 @@
       .messages {
         .msg{
           margin-bottom: 5px;
+          padding-bottom: 15px;
 
           .msg-title {
             margin-top: 5px;
