--- a/client/decorators/MetaDecorator/DiagramDesigner/templates/MetaTextEditorDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/templates/MetaTextEditorDialog.html
@@ -5,13 +5,13 @@
                 <button type="button" class="close" data-dismiss="modal">×</button>
                 <h3>Edit meta parameters...</h3>
             </div>
-            <div class="modal-body form-horizontal">
+            <form class="modal-body form-horizontal" role="form">
                 <div class="control-group" id="pMeta">
                     <label class="control-label">META definition</label>
                     <div class="controls">
                     </div>
                 </div>
-            </div>
+            </form>
             <div class="modal-footer">
                 <a href="#" class="btn btn-primary btn-save">Save</a>
                 <a href="#" class="btn" data-dismiss="modal">Cancel</a>
