--- a/client/decorators/MetaDecorator/DiagramDesigner/templates/MetaTextEditorDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/templates/MetaTextEditorDialog.html
@@ -14,7 +14,7 @@
             </form>
             <div class="modal-footer">
                 <a href="#" class="btn btn-primary btn-save">Save</a>
-                <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+                <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
             </div>
         </div>
     </div>
