--- a/client/js/Widgets/MetaEditor/templates/MetaEditorPointerNamesDialog.html
+++ b/client/js/Widgets/MetaEditor/templates/MetaEditorPointerNamesDialog.html
@@ -3,17 +3,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
-                <h3>New pointer...</h3>
+                <h3>Create new pointer</h3>
             </div>
             <form class="modal-body" role="form">
-                <div class="form-group">
+                <div class="row">
                     <label class="col-sm-4 control-label">
                         Pick one of the existing pointers:
                     </label>
-                    <div class="col-sm-8 controls btn-group-existing btn-group btn-group-vertical">
+                    <div class="col-sm-4 controls btn-group-existing btn-group btn-group-vertical">
                     </div>
                 </div>
-                <div class="panel-popular form-group">
+                <div class="panel-popular row">
                      <label class="col-sm-4 control-label">
                          Or pick a popular one:
                      </label>
