final bit for nre pointer dialog html

--- a/client/js/Widgets/MetaEditor/templates/MetaEditorPointerNamesDialog.html
+++ b/client/js/Widgets/MetaEditor/templates/MetaEditorPointerNamesDialog.html
@@ -17,7 +17,7 @@
                      <label class="col-sm-4 control-label">
                          Or pick a popular one:
                      </label>
-                     <div class="col-sm-8 controls btn-group-popular btn-group">
+                     <div class="col-sm-4 controls btn-group-popular btn-group btn-group-vertical">
                      </div>
                 </div>
             </form>
