--- a/client/js/Widgets/MetaEditor/templates/MetaEditorPointerNamesDialog.html
+++ b/client/js/Widgets/MetaEditor/templates/MetaEditorPointerNamesDialog.html
@@ -7,7 +7,7 @@
             </div>
             <form class="modal-body" role="form">
                 <div class="row">
-                    <label class="col-sm-4 control-label">
+                    <label class="col-sm-4 control-label pick-existing-label">
                         Pick one of the existing pointers:
                     </label>
                     <div class="col-sm-4 controls btn-group-existing btn-group btn-group-vertical">
@@ -23,7 +23,7 @@
             </form>
             <div class="modal-footer">
                 <div class="panel-create-new form-group">
-                    <label class="col-sm-4 control-label">
+                    <label class="col-sm-4 control-label create-new-label">
                         Or create a new pointer:
                     </label>
                     <div class="col-sm-8 input-group">
