--- a/client/decorators/MetaDecorator/DiagramDesigner/templates/MetaTextEditorDialog.html
+++ b/client/decorators/MetaDecorator/DiagramDesigner/templates/MetaTextEditorDialog.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
-                <h3>Edit meta parameters...</h3>
+                <h3>Edit meta parameters</h3>
             </div>
             <form class="modal-body form-horizontal" role="form">
                 <div class="control-group" id="pMeta">
