--- a/client/js/Dialogs/Import/templates/ImportDialog.html
+++ b/client/js/Dialogs/Import/templates/ImportDialog.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
-                <h3>Import file...</h3>
+                <h3>Import file</h3>
             </div>
             <div class="modal-body">
                 <input type="file" id="fileInput" accept=".json">
