--- a/client/js/Dialogs/DecoratorSVGExplorer/styles/DecoratorSVGExplorerDialog.css
+++ b/client/js/Dialogs/DecoratorSVGExplorer/styles/DecoratorSVGExplorerDialog.css
@@ -15,17 +15,20 @@
   cursor: pointer; }
   .decorator-svg-dialog div.img img {
     display: inline;
-    margin: 5px;
-    max-width: 102px;
-    max-height: 60px; }
+    margin: 0;
+    padding: 3px;
+    max-width: 100%;
+    max-height: 68px; }
   .decorator-svg-dialog div.img div.desc {
     text-align: center;
     font-weight: normal;
     line-height: 20px;
-    width: 102px;
-    margin: 5px;
+    width: 100%;
+    padding: 0 .5ex;
+    margin: 0;
     position: absolute;
-    bottom: -5px;
+    left: 0;
+    bottom: 0;
     overflow: hidden;
     text-overflow: ellipsis; }
   .decorator-svg-dialog div.img:hover {
@@ -37,3 +40,8 @@
     -webkit-box-shadow: 0px 0px 15px 0px #1276d4 !important;
     -moz-box-shadow: 0px 0px 15px 0px #1276d4 !important;
     box-shadow: 0px 0px 15px 0px #1276d4 !important; }
+
+.selected > div.desc {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none; }
