--- a/client/js/Dialogs/Import/templates/ImportDialog.html
+++ b/client/js/Dialogs/Import/templates/ImportDialog.html
@@ -6,12 +6,28 @@
                 <h3>Import file</h3>
             </div>
             <div class="modal-body">
-                <input type="file" id="fileInput" accept=".json">
-                <div class="file-drop-target">
-                    Select a file or drop one here...
-                </div>
-                <div class="alert alert-error" style="margin-top:5px; text-align: center;font-weight: bold; overflow: hidden; text-overflow: ellipsis">
-                </div>
+                <form class="form-horizontal" role="form">
+                    <div class="row">
+                        <input type="file" id="fileInput" accept=".json">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">XML File</label>
+                        <div class="col-sm-8 controls">
+                            <div class="widget">
+                                <div class="asset-widget">
+                                    <a href="" title=""></a>
+                                    <a class="btn btn-mini btn-dialog-open">
+                                        <i class="glyphicon glyphicon-file"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="alert alert-error" style="margin-top:5px; text-align: center;font-weight: bold; overflow: hidden; text-overflow: ellipsis">
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary btn-import" disabled>Import...</button>
