--- a/client/js/Dialogs/Projects/styles/ProjectsDialog.css
+++ b/client/js/Dialogs/Projects/styles/ProjectsDialog.css
@@ -1,8 +1,3 @@
-/*
- * Copyright (C) 2013 Vanderbilt University, All rights reserved.
- * 
- * Author: Robert Kereskenyi
- */
 .projects-dialog .pre-body {
   padding: 15px;
   padding-bottom: 0px; }
@@ -11,10 +6,12 @@
     .projects-dialog .pre-body .tabContainer ul.nav.nav-tabs li {
       width: 86px;
       text-align: center; }
-.projects-dialog .modal-body ul.nav-pills li a span.ro {
-  margin-left: 5px;
-  color: #999999;
-  font-size: 9px; }
+.projects-dialog .modal-body {
+  min-height: 300px; }
+  .projects-dialog .modal-body ul.nav-pills li a span.ro {
+    margin-left: 5px;
+    color: #999999;
+    font-size: 9px; }
 
 .txt-project-name {
   width: 50%; }
