--- a/client/js/Dialogs/Projects/styles/ProjectsDialog.scss
+++ b/client/js/Dialogs/Projects/styles/ProjectsDialog.scss
@@ -1,10 +1,3 @@
-
-/*
- * Copyright (C) 2013 Vanderbilt University, All rights reserved.
- * 
- * Author: Robert Kereskenyi
- */
-
 .projects-dialog {
   .pre-body {
     padding: 15px;
@@ -24,6 +17,8 @@
 
 
   .modal-body {
+    min-height: 300px;
+
     ul.nav-pills {
       li {
         a {
