--- a/client/js/Dialogs/Import/templates/ImportDialog.html
+++ b/client/js/Dialogs/Import/templates/ImportDialog.html
@@ -7,15 +7,16 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" role="form">
+
                     <div class="row">
                         <input type="file" id="fileInput" accept=".json">
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label">XML File</label>
-                        <div class="col-sm-8 controls">
+                        <label class="col-sm-3 control-label">Exported JSON file:</label>
+                        <div class="col-sm-9 controls">
                             <div class="widget">
-                                <div class="asset-widget">
+                                <div class="asset-widget file-drop-target">
                                     <a href="" title=""></a>
                                     <a class="btn btn-mini btn-dialog-open">
                                         <i class="glyphicon glyphicon-file"></i>
