--- a/client/js/Dialogs/Import/templates/ImportDialog.html
+++ b/client/js/Dialogs/Import/templates/ImportDialog.html
@@ -11,13 +11,19 @@
                     <div class="row">
                         <input type="file" id="fileInput" accept=".json">
                     </div>
-
+                    <div class="row">
+                        <div class="col-sm-9 controls">
+                            Drag-and-drop a file or click on the file icon to upload one below:
+                        </div>
+                    </div>
+                    <div class="row">
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Exported JSON file:</label>
                         <div class="col-sm-9 controls">
                             <div class="widget">
                                 <div class="asset-widget file-drop-target">
-                                    <a href="" title=""></a>
+                                    <span class="uploaded-file-name empty">No file selected</span>
                                     <a class="btn btn-mini btn-dialog-open">
                                         <i class="glyphicon glyphicon-file"></i>
                                     </a>
