data schema for navigator

--- a/client/ui-components/ProjectBreadcrumb/templates/ProjectBreadcrumb.html
+++ b/client/ui-components/ProjectBreadcrumb/templates/ProjectBreadcrumb.html
@@ -1,1 +1,5 @@
-<p>Fancy pantsy!</p>
+ <div class="project-breadcrumb">
+     <ul data-ng-repeat="project in projects">
+         <li tooltip="{{project.name}}">{{project.name}}</li>
+     </ul>
+ </div>
